# goop

./: .clang-format  .gitignore  CMakeLists.txt  GenerateVisualStudioProject.bat  README.md  cfg.json  imgui.ini  lvl.json  main.cpp
.github/workflows/: build-on-arch.yml  build-on-windows.yml
app/: CMakeLists.txt  EditorApp.cpp  EditorApp.h
cmake/: FindASSIMP.cmake  FindGLFW3.cmake  FindGLM.cmake  FindSDL2.cmake  FindSTB.cmake
components/: CMakeLists.txt  Circle.cpp  Circle.h  CustomComponents.h  PlayerInput.cpp  PlayerInput.h  Shoutout.cpp  Shoutout.h  TestCustomComp.cpp  TestCustomComp.h  WindowsTest.cpp  WindowsTest.h  createComponent.bat  createComponent.sh  createComponentLinux.sh  createComponentWin.sh  updateComponents.bat  updateComponents.sh
editor/: CMakeLists.txt  EditorApp.cpp  EditorApp.h
game/: CMakeLists.txt  GameApp.cpp  GameApp.h
goop/: App.cpp  App.h  CMakeLists.txt  Camera.cpp  Camera.h  Components.h  Core.cpp  Core.h  Entity.cpp  Entity.h  Input.h  Physics.h  Primitives.h  Scene.cpp  Scene.h  Sound.h  main.cpp
goop/sys/: Audio.cpp  Audio.h  ImageLoader.cpp  ImageLoader.h  MeshLoader.cpp  MeshLoader.h  Physics.cpp  Physics.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  ResourceSubsystem.cpp  ResourceSubsystem.h  Sfx.cpp  Sfx.h  Subsystem.h  Vertex.h  Window.cpp  Window.h
goop/sys/platform/assimp/: MeshLoader_Assimp.cpp  MeshLoader_Assimp.h
goop/sys/platform/bullet/: Physics_Bullet.cpp  Physics_Bullet.h
goop/sys/platform/glfw/: Window_GLFW.cpp  Window_GLFW.h
goop/sys/platform/soloud/: Audio_SoLoud.cpp  Audio_SoLoud.h  Sfx_SoLoud.cpp  Sfx_SoLoud.h
goop/sys/platform/stb/: ImageLoader_STB.cpp  ImageLoader_STB.h
goop/sys/platform/vulkan/: BufferHelpers.h  Buffers.cpp  Buffers.h  Context.cpp  Context.h  Descriptor.cpp  Descriptor.h  Pipeline.cpp  Pipeline.h  QueueFamilyIndices.h  Renderer_Vulkan.cpp  Renderer_Vulkan.h  Sampler.cpp  Sampler.h  Swapchain.cpp  Swapchain.h  SwapchainSupportInfo.h  Sync.cpp  Sync.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  UniformBufferObject.h  Utils.h  Vertex.h
libs/bullet3/: CMakeLists.txt
libs/imgui/: CMakeLists.txt  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
libs/imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
libs/imgui/backends/vulkan/: glsl_shader_inside_window.frag
libs/soloud/: CMakeLists.txt
libs/soloud/backend/sdl2_static/: soloud_sdl2_static.cpp
notes/: engine_modules.excalidraw
rust_lib/: Cargo.toml
rust_lib/include/: rustlib.h
rust_lib/src/: lib.rs
shaders/: shader.frag  shader.vert
src/: Core.cpp  Core.h
src/sys/: Renderer.cpp  Renderer.h  Window.cpp  Window.h
src/sys/platform/: Renderer_Vulkan.cpp  Renderer_Vulkan.h  Window_GLFW.cpp  Window_GLFW.h
windows/: BUILD_MSVC.bat  GEN_VS_PROJ.bat  GET_LIBS.bat
